--- a/frontend/packages/ui-lib/src/loader/Loader.scss
+++ b/frontend/packages/ui-lib/src/loader/Loader.scss
@@ -1,17 +1,16 @@
 .loader-wrapper {
-  position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 .lds-ellipsis {
-  display: inline-block;
+  display: block;
   position: relative;
   width: 80px;
   height: 80px;
 
   top: 50%;
   left: 50%;
-  transform: translateY(-50%) translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
 }
 .lds-ellipsis div {
   position: absolute;
